Finalização das matérias

--- a/Blog.html
+++ b/Blog.html
@@ -7,8 +7,10 @@
     <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/blog.css">
     <link rel="stylesheet" href="CSS/Resposividade/BlogR.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
-    <title>Educação Financeira - Blog</title>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
+        async defer></script>
+    <title>Monetize-se - Blog</title>
 </head>
 
 <body>
@@ -19,7 +21,7 @@
         </div>
         <ul>
             <li><a href="index.html">Principal</a></li>
-            <li><a href="Blog.html" id="Ativado" >Blog</a></li>
+            <li><a href="Blog.html" id="Ativado">Blog</a></li>
             <li><a href="QuemSomos.html">Quem Somos</a></li>
             <li><a href="Servicos.html">Serviços</a></li>
         </ul>
@@ -32,14 +34,16 @@
                     <div id="texto">
                         <h2>O que é educação financeira?</h2>
                         <p class="tema">tema</p>
-                        <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada diretamente ao mercado econômico atual.</p>
+                        <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada
+                            diretamente ao mercado econômico atual.</p>
                     </div>
                 </a>
                 <a class="slide" href="Materias/materia2.html" id="S2">
                     <div id="texto">
                         <h2>O que é investimentos?</h2>
                         <p class="tema">tema</p>
-                        <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte do planejamento financeiro e deve buscar atender os seus objetivos.</p>
+                        <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte
+                            do planejamento financeiro e deve buscar atender os seus objetivos.</p>
                     </div>
                 </a>
                 <a class="slide" href="Materias/materia3.html" id="S3">
@@ -70,13 +74,15 @@
                         <div class="imgMateria" id="M4"></div>
                         <p class="temaM">Tema</p>
                         <h4>Poupança</h4>
-                        <p>Poupar é uma forma tradicional de investir e não envolve riscos. A finalidade da poupança é guardar recursos fixos para usar em um determinado fim.</p>
+                        <p>Poupar é uma forma tradicional de investir e não envolve riscos. A finalidade da poupança é
+                            guardar recursos fixos para usar em um determinado fim.</p>
                     </a>
                     <a href="Materias/materia5.html">
                         <div class="imgMateria" id="M5"></div>
                         <p class="temaM">Tema</p>
                         <h4>O que é liquidez?</h4>
-                        <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em mãos</p>
+                        <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em
+                            mãos</p>
                     </a>
                     <aside>
                         <p>e</p>
@@ -85,7 +91,8 @@
                         <div class="imgMateria" id="M6"></div>
                         <p class="temaM">Tema</p>
                         <h4>Bolsa de Valores</h4>
-                        <p>A bolsa de valores é um ambiente digital onde ocorrem a negociação de ações, títulos e outros ativos. </p>
+                        <p>A bolsa de valores é um ambiente digital onde ocorrem a negociação de ações, títulos e outros
+                            ativos. </p>
                     </a>
                     <aside class="asideMobile">
                         <p>e</p>
@@ -94,7 +101,8 @@
                         <div class="imgMateria" id="M7"></div>
                         <p class="temaM">Tema</p>
                         <h4>Juros e inflação</h4>
-                        <p>Juros é a porcentagem que é cobrada a partir do empréstimo do dinheiro, e a inflação são os aumentos nos valores de bem que ocorrem em alguns períodos. </p>
+                        <p>Juros é a porcentagem que é cobrada a partir do empréstimo do dinheiro, e a inflação são os
+                            aumentos nos valores de bem que ocorrem em alguns períodos. </p>
                     </a>
                     <aside>
                         <p>e</p>
@@ -106,7 +114,8 @@
                         <div class="imgMateria" id="M8"></div>
                         <p class="temaM">Tema</p>
                         <h4>Crédito</h4>
-                        <p>Crédito é uma forma de compra rápida oferecida por bancos centrais que não precisa necessariamente do dinheiro na hora.</p>
+                        <p>Crédito é uma forma de compra rápida oferecida por bancos centrais que não precisa
+                            necessariamente do dinheiro na hora.</p>
                     </a>
                     <aside>
                         <p>e</p>
@@ -115,7 +124,8 @@
                         <div class="imgMateria" id="M9"></div>
                         <p class="temaM">Tema</p>
                         <h4>Endividamento</h4>
-                        <p>O endividamento acontece quando você não consegue arcar com os gastos e acaba adiando o pagamento. </p>
+                        <p>O endividamento acontece quando você não consegue arcar com os gastos e acaba adiando o
+                            pagamento. </p>
                     </a>
                     <aside class="asideMobile">
                         <p>e</p>
@@ -124,7 +134,8 @@
                         <div class="imgMateria" id="M1"></div>
                         <p class="temaM">Tema</p>
                         <h4>O que é educação financeira?</h4>
-                        <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada diretamente ao mercado econômico atual.</p>
+                        <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada
+                            diretamente ao mercado econômico atual.</p>
                     </a>
                     <aside>
                         <p>e</p>
@@ -133,7 +144,8 @@
                         <div class="imgMateria" id="M2"></div>
                         <p class="temaM">Tema</p>
                         <h4>O que é investimentos?</h4>
-                        <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte do planejamento financeiro e deve buscar atender os seus objetivos.</p>
+                        <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte
+                            do planejamento financeiro e deve buscar atender os seus objetivos.</p>
                     </a>
                     <a href="Materias/materia3.html">
                         <div class="imgMateria" id="M3"></div>
@@ -170,14 +182,20 @@
             <div id="map"></div>
             <div id="Contatos">
                 <h3>Contato</h3>
-                <img src="IMG/Icons/Predio.png" alt="IconPredio"><p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
-                <img src="IMG/Icons/Telefone.png" alt="IconTel"><p>(11)4823-7765</p><br>
-                <img src="IMG/Icons/whatsapp.png" alt="IconWhats"><p>(11) 98756-4456</p><br>
-                <img src="IMG/Icons/Email.png" alt="IconEmail"><p>educacaofinanceiratcc23@gmail.com</p><br>
-                <img src="IMG/Icons/instagram.png" alt="IconInsta"><p>@aces.soriafinanceira</p><br>
+                <img src="IMG/Icons/Predio.png" alt="IconPredio">
+                <p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
+                <img src="IMG/Icons/Telefone.png" alt="IconTel">
+                <p>(11)4823-7765</p><br>
+                <img src="IMG/Icons/whatsapp.png" alt="IconWhats">
+                <p>(11) 98756-4456</p><br>
+                <img src="IMG/Icons/Email.png" alt="IconEmail">
+                <p>educacaofinanceiratcc23@gmail.com</p><br>
+                <img src="IMG/Icons/instagram.png" alt="IconInsta">
+                <p>@aces.soriafinanceira</p><br>
             </div>
         </div>
-        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
+        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a
+                href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
     </footer>
     <script src="JS/script.js"></script>
 </body>
