--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,10 @@
     <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/Resposividade/Responsividade.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
-    <title>Educação Financeira</title>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
+        async defer></script>
+    <title>Monetize-se</title>
 </head>
 
 <body>
@@ -33,15 +35,21 @@
             <p>Breve descrição</p>
             <div>
                 <ul>
-                    <li><strong>Oferecemos</strong><p>ao público jovem o aprendizado abrangente sobre educação financeira</p></li>
-                    <li><strong>Queremos</strong><p>apresentar o reconhecimento dos impactos futuros desse conhecimento na qualidade de vida</p></li>
+                    <li><strong>Oferecemos</strong>
+                        <p>ao público jovem o aprendizado abrangente sobre educação financeira</p>
+                    </li>
+                    <li><strong>Queremos</strong>
+                        <p>apresentar o reconhecimento dos impactos futuros desse conhecimento na qualidade de vida</p>
+                    </li>
                 </ul>
                 <figure>E</figure>
             </div>
         </section>
         <section id="PropostaP">
             <h2>Nossa proposta</h2>
-            <p>A proposta da Monetiza-se é trazer conhecimentos de finanças para um público jovem de maneira lúdica. Que visa mostrar a importância do uso correto do dinheiro e a melhor maneira de administrar ele, para uma melhor qualidade de vida.</p>
+            <p>A proposta da Monetiza-se é trazer conhecimentos de finanças para um público jovem de maneira lúdica. Que
+                visa mostrar a importância do uso correto do dinheiro e a melhor maneira de administrar ele, para uma
+                melhor qualidade de vida.</p>
         </section>
         <section id="ServicosP">
             <h1>Nosso Serviços</h1>
@@ -49,10 +57,19 @@
             <div>
                 <figure>E</figure>
                 <ul>
-                    <li><p>nosso</p><a href="blog.html">blog</a><p>com matérias informativas</p></li>
-                    <li><p>materiais didáticos</p></li>
-                    <li><p>aulas</p></li>
-                    <li><p>e palestras para redes de ensino</p></li>
+                    <li>
+                        <p>nosso</p><a href="blog.html">blog</a>
+                        <p>com matérias informativas</p>
+                    </li>
+                    <li>
+                        <p>materiais didáticos</p>
+                    </li>
+                    <li>
+                        <p>aulas</p>
+                    </li>
+                    <li>
+                        <p>e palestras para redes de ensino</p>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -76,14 +93,20 @@
             <div id="map"></div>
             <div id="Contatos">
                 <h3>Contato</h3>
-                <img src="IMG/Icons/Predio.png" alt="IconPredio"><p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
-                <img src="IMG/Icons/Telefone.png" alt="IconTel"><p>(11)4823-7765</p><br>
-                <img src="IMG/Icons/whatsapp.png" alt="IconWhats"><p>(11) 98756-4456</p><br>
-                <img src="IMG/Icons/Email.png" alt="IconEmail"><p>educacaofinanceiratcc23@gmail.com</p><br>
-                <img src="IMG/Icons/instagram.png" alt="IconInsta"><p>@aces.soriafinanceira</p><br>
+                <img src="IMG/Icons/Predio.png" alt="IconPredio">
+                <p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
+                <img src="IMG/Icons/Telefone.png" alt="IconTel">
+                <p>(11)4823-7765</p><br>
+                <img src="IMG/Icons/whatsapp.png" alt="IconWhats">
+                <p>(11) 98756-4456</p><br>
+                <img src="IMG/Icons/Email.png" alt="IconEmail">
+                <p>educacaofinanceiratcc23@gmail.com</p><br>
+                <img src="IMG/Icons/instagram.png" alt="IconInsta">
+                <p>@aces.soriafinanceira</p><br>
             </div>
         </div>
-        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
+        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a
+                href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
     </footer>
     <script src="JS/script.js"></script>
 </body>
