--- a/Materias/materia1.html
+++ b/Materias/materia1.html
@@ -7,8 +7,10 @@
     <link rel="shortcut icon" href="../IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/materias.css">
     <link rel="stylesheet" href="../CSS/Resposividade/MateriaR.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
-    <title>Educação Financeira - O que é educação financeira?</title>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
+        async defer></script>
+    <title>Monetize-se - O que é educação financeira?</title>
 </head>
 
 <body>
@@ -34,9 +36,16 @@
         </header>
         <section id="TextoMateria">
             <article>
-                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação, créditos, investimentos e contas.</p>
-                <p>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir.</p>
-                <p>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas.</p>
+                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o
+                    dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas
+                    e despesas, juros e inflação, créditos, investimentos e contas.</p>
+                <p>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e
+                    seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a
+                    melhor forma de guarda e investir.</p>
+                <p>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam
+                    qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já
+                    que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira,
+                    até mesmo em momentos de crises e situações inusitadas.</p>
             </article>
             <aside></aside>
         </section>
@@ -88,14 +97,20 @@
             <div id="map"></div>
             <div id="Contatos">
                 <h3>Contato</h3>
-                <img src="../IMG/Icons/Predio.png" alt="IconPredio"><p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
-                <img src="../IMG/Icons/Telefone.png" alt="IconTel"><p>(11)4823-7765</p><br>
-                <img src="../IMG/Icons/whatsapp.png" alt="IconWhats"><p>(11) 98756-4456</p><br>
-                <img src="../IMG/Icons/Email.png" alt="IconEmail"><p>educacaofinanceiratcc23@gmail.com</p><br>
-                <img src="../IMG/Icons/instagram.png" alt="IconInsta"><p>@aces.soriafinanceira</p><br>
+                <img src="../IMG/Icons/Predio.png" alt="IconPredio">
+                <p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
+                <img src="../IMG/Icons/Telefone.png" alt="IconTel">
+                <p>(11)4823-7765</p><br>
+                <img src="../IMG/Icons/whatsapp.png" alt="IconWhats">
+                <p>(11) 98756-4456</p><br>
+                <img src="../IMG/Icons/Email.png" alt="IconEmail">
+                <p>educacaofinanceiratcc23@gmail.com</p><br>
+                <img src="../IMG/Icons/instagram.png" alt="IconInsta">
+                <p>@aces.soriafinanceira</p><br>
             </div>
         </div>
-        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
+        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a
+                href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
     </footer>
     <script src="../JS/script.js"></script>
 </body>
