--- a/Padrao.html
+++ b/Padrao.html
@@ -7,8 +7,10 @@
     <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/padrão.css">
     <link rel="stylesheet" href="CSS/Resposividade/responsividade.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
-    <title>Educação Financeira</title>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
+        async defer></script>
+    <title>Monetize-se</title>
 </head>
 
 <body>
@@ -45,14 +47,20 @@
             <div id="map"></div>
             <div id="Contatos">
                 <h3>Contato</h3>
-                <img src="IMG/Icons/Predio.png" alt="IconPredio"><p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
-                <img src="IMG/Icons/Telefone.png" alt="IconTel"><p>(11)4823-7765</p><br>
-                <img src="IMG/Icons/whatsapp.png" alt="IconWhats"><p>(11) 98756-4456</p><br>
-                <img src="IMG/Icons/Email.png" alt="IconEmail"><p>educacaofinanceiratcc23@gmail.com</p><br>
-                <img src="IMG/Icons/instagram.png" alt="IconInsta"><p>@aces.soriafinanceira</p><br>
+                <img src="IMG/Icons/Predio.png" alt="IconPredio">
+                <p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
+                <img src="IMG/Icons/Telefone.png" alt="IconTel">
+                <p>(11)4823-7765</p><br>
+                <img src="IMG/Icons/whatsapp.png" alt="IconWhats">
+                <p>(11) 98756-4456</p><br>
+                <img src="IMG/Icons/Email.png" alt="IconEmail">
+                <p>educacaofinanceiratcc23@gmail.com</p><br>
+                <img src="IMG/Icons/instagram.png" alt="IconInsta">
+                <p>@aces.soriafinanceira</p><br>
             </div>
         </div>
-        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
+        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a
+                href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
     </footer>
     <script src="JS/script.js"></script>
 </body>
