--- a/QuemSomos.html
+++ b/QuemSomos.html
@@ -10,7 +10,7 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
         async defer></script>
-    <title>Educação Financeira - Quem Somos</title>
+    <title>Monetize-se - Quem Somos</title>
 </head>
 
 <body>
@@ -29,25 +29,33 @@
     <main>
         <section id="QuemSomos">
             <h1>Quem Somos</h1>
-            <p>Nossa empresa é nova e apresenta um grande diferencial no mercado, um serviço personalizado para o nosso público e a valorização de cada um individualmente, criando uma experiência única e lúdica para o público.</p>
-            <p>Visamos transformar a sua vida pessoal, profissional e finanças satisfatória. A empresa aposta em inovação para atingir o objetivo de propagar o conhecimento sobre educação financeira e mudar a realidade das pessoas com a aplicação do tema no seu cotidiano.</p>
+            <p>Nossa empresa é nova e apresenta um grande diferencial no mercado, um serviço personalizado para o nosso
+                público e a valorização de cada um individualmente, criando uma experiência única e lúdica para o
+                público.</p>
+            <p>Visamos transformar a sua vida pessoal, profissional e finanças satisfatória. A empresa aposta em
+                inovação para atingir o objetivo de propagar o conhecimento sobre educação financeira e mudar a
+                realidade das pessoas com a aplicação do tema no seu cotidiano.</p>
         </section>
         <section id="MVV">
             <h1>Missão, Visão e Valores</h1>
             <article>
                 <img src="IMG/missao.png" alt="missao">
                 <h2>Missão</h2>
-                <p>Capacitar adolescente do ensino médio com habilidades e conhecimentos necessários para gerenciar suas finanças pessoais ao tomar decisões financeiras, gerando uma formação responsável e eficaz.</p>
+                <p>Capacitar adolescente do ensino médio com habilidades e conhecimentos necessários para gerenciar suas
+                    finanças pessoais ao tomar decisões financeiras, gerando uma formação responsável e eficaz.</p>
             </article>
             <article>
                 <img src="IMG/visao.png" alt="visao">
                 <h2>Visão</h2>
-                <p>Ser uma referência no âmbito da educação financeira para adolescente, de forma que os mesmo tenham ciência da importância deste conhecimento para gerenciar um futuro com mais qualidade de vida e estabilidade</p>
+                <p>Ser uma referência no âmbito da educação financeira para adolescente, de forma que os mesmo tenham
+                    ciência da importância deste conhecimento para gerenciar um futuro com mais qualidade de vida e
+                    estabilidade</p>
             </article>
             <article>
                 <img src="IMG/valores.png" alt="valores">
                 <h2>Valores</h2>
-                <p>Somos uma empresa comprometida em transforma a realidade do nosso público, atuar com transparência, comprometimento e eficácia gerando um aprendizado contínuo e de alta qualidade.</p>
+                <p>Somos uma empresa comprometida em transforma a realidade do nosso público, atuar com transparência,
+                    comprometimento e eficácia gerando um aprendizado contínuo e de alta qualidade.</p>
             </article>
         </section>
         <section id="Newsletter">
