--- a/Blog.html
+++ b/Blog.html
@@ -57,19 +57,30 @@
             <button id="seta-proxima">⇨</button>
             <div class="indicadores"></div>
         </section>
-        <section id="categorias">
-            <h3>O que procura?</h3>
-            <article>
-                <a href="">tema</a>
-                <a href="">tema</a>
-                <a href="">tema</a>
-                <a href="">tema</a>
-            </article>
-        </section>
         <section id="Materias">
-            <h3>Matérias</h3>
+            <h1>Matérias</h1>
             <div id="ComAside">
                 <article>
+                    <div id="filtroM">
+                        <h3>Filtro</h3>
+                        <form action="">
+                            <div>
+                                <input type="checkbox" name="" id="" value="1">
+                                <label for="">Tema1</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="" id="" value="2">
+                                <label for="">Tema2</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="" id="" value="3">
+                                <label for="">Tema3</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="" id="" value="4">
+                                <label for="">Tema4</label>
+                            </div>
+                    </div>
                     <a href="Materias/materia4.html">
                         <div class="imgMateria" id="M4"></div>
                         <p class="temaM">Tema</p>
@@ -84,9 +95,18 @@
                         <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em
                             mãos</p>
                     </a>
-                    <aside>
-                        <p>e</p>
-                    </aside>
+                    <div id="filtro">
+                        <h3>Filtro</h3>
+                        <form action="">
+                            <input type="checkbox" name="" id="" value="1">
+                            <label for="">Educação Financeira</label><br>
+                            <input type="checkbox" name="" id="" value="2">
+                            <label for="">Investimentos</label><br>
+                            <input type="checkbox" name="" id="" value="3">
+                            <label for="">Crédito</label><br>
+                            <input type="checkbox" name="" id="" value="4">
+                            <label for="">Endividamento</label><br>
+                    </div>
                     <a href="Materias/materia6.html">
                         <div class="imgMateria" id="M6"></div>
                         <p class="temaM">Tema</p>
