--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
                         <p>apresentar o reconhecimento dos impactos futuros desse conhecimento na qualidade de vida</p>
                     </li>
                 </ul>
-                <figure>E</figure>
+                <figure><img src="IMG/quemEA.jpg" alt=""></figure>
             </div>
         </section>
         <section id="PropostaP">
@@ -55,7 +55,7 @@
             <h1>Nosso Serviços</h1>
             <p>Breve descrição</p>
             <div>
-                <figure>E</figure>
+                <figure><img src="IMG/oQueOferecemos.jpg" alt=""></figure>
                 <ul>
                     <li>
                         <p>nosso</p><a href="blog.html">blog</a>
